# wlout

./: .gitignore  Cargo.toml  LICENSE.md  README.md  REFERENCE.md  Taskfile.yaml
protocol/: wayland.xml  wlr-output-management-unstable-v1.xml
src/: cli.rs  common.rs  handles.rs  head_printer.rs  lib.rs  list_command.rs  main.rs  mode_command.rs  mode_list_command.rs  model.rs  off_command.rs  on_command.rs  parsers.rs  test.md
src/backends/: common.rs  mod.rs
src/backends/wlroot/: connect_trait.rs  info_command.rs  list_command.rs  mirror_command.rs  mod.rs  mode_command.rs  move_command.rs  power_command.rs
src/commands/: commands.rs  common.rs  completion_command.rs  info_command.rs  list_command.rs  mirror_command.rs  mod.rs  mode_command.rs  move_command.rs  off_command.rs  power_command.rs
templates/: readme.stpl
