[package]
name = "wayland_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
wayland-client = "0.31.11"
wayland-protocols = { version = "0.32.9", features = ["unstable"] }
wayland-protocols-wlr = {version = "0.3.9", features=["client"]}
log = "0.4.29"
clap = { version = "4.5.53", features = ["derive"] }
