[package]
name = "wlout"
version = "0.1.20"
edition = "2024"

[dependencies]
wayland-client = "0.31.11"
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }
clap = { version = "4.5.53", features = ["derive", "cargo"] }
clap_complete = "4.5.61"
tabwriter = "1.4.1"

[profile.release]
opt-level = "s"
