[package]
name = "wlout"
version = "0.3.0"
edition = "2024"

[dependencies]
wayland-client = "0.31.11"
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }
clap = { version = "4.5.53", features = ["derive", "cargo"] }
clap_complete = "4.5.61"
tabwriter = "1.4.1"
clap-markdown = { version = "0.1.5", optional = true }
sailfish = { version = "0.10.1", optional = true }

[profile.release]
opt-level = "s"

[features]
markdown = ["clap-markdown", "sailfish"]

[[bin]]
name = "generate_readme"
path = "src/bin/generate_readme.rs"
required-features = ["markdown"]

[[bin]]
name = "generate_full_ref"
path = "src/bin/generate_full_ref.rs"
required-features = ["markdown"]
